src/app/home/home.page.scss
ion-header{
    background-color: rgb(24, 126, 129);
    display:flex;
    flex-direction: row;
}
.headerDateHolder{
    align-items: center;
    justify-content: flex-start;
    align-content: center;
}

.headerContentHolder{
    align-items: center;
    justify-content: flex-end;
    align-content: center;
}


.profileIcon{
    font-size: 210%;
    margin-right: 11px;
    margin-bottom: 10px;
    margin-top: 10px;
    color: aliceblue;

}

.menuIcon{
    font-size: 180%;
    margin-left: 15px;
    margin-bottom: 10px;
    margin-top: 10px;
    color: aliceblue;

}

.todaysPhotoHolder{
    display:flex;
    flex-direction: column;
    margin: 2%;
    padding-top: 8px;
    padding-right: 8px;
    padding-left: 8px;
    padding-bottom: 8px;
    background-color: white;
    box-shadow: 2px 2px 3px 3px #999; 
    -moz-box-shadow: 2px 2px 3px 3px #999;
    -webkit-box-shadow: 2px 2px 3px 3px #999;
    max-height: 90%;
}

.imageSrc{
    max-height: 60%;
    margin-bottom: 8px;
    margin-top: 5px;
}

.photoDataHolder{
    //flex-direction: row;
    display: block;
    text-align: justify;
    margin-top: 6px;
    margin-bottom: 5px;

}

.dateBadge{
    float: left;
    width: 10em;
}

.dateLabel{
    font-size: 1.2em;
    margin-top: 3px;
}

.likeIcon{
    float: left;
    font-size:1.8em;
}

.numberOfLikes{
    margin-left: 0.3em;
    color: rgb(85, 82, 82);
    font-size: 1.1em;
}

.commentsLabel{
    float: right;
    font-style: oblique;
    color: rgb(85, 82, 82);
    font-size: 1.1em;
}

.numberOfComments{
    float: right;
    margin-right: 3px;
    font-style: oblique;
    color: rgb(85, 82, 82);
    font-size: 1.1em;
}


.commentBtn{
    color: white;
    margin-left: 2px;
    margin-right: 2px;
    margin-top: 4px;
    margin-bottom: 4px;
    border-radius: 40px !important;
    background-color: rgb(24, 126, 129);
    padding: 1em;
    box-shadow: 5px 5px 5px #999; 
    -moz-box-shadow: 3px 3px 3px #999;
    -webkit-box-shadow: 3px 3px 3px #999;

}

.topCommentsSection{
    margin-top: 10px;
    display: flex;
    flex-direction: column;
}

.commentHolder{
    display: flex;
    flex-direction: row;
    margin-left: 5px;
    margin-right: 5px;
    margin-top: 10px;
    margin-bottom: 10px;
}

.topCommentsLabel{
    font-size: 1.1em;
}

ion-label{
    font-size: 1.1em;
}

.comment{
    display: flex;
    flex-direction: column;
    margin-left: 10px;
    width: 77%;
}

.commentator{
    font-size: 1.50em;

}

.photoHolder{
    display: flex;
    flex-direction: column;
}

.totalLikes{
    margin-left: 28%;
    font-size: 2em;


}

ionic-avatar{
    margin-top: 25px;
}

.commentText{
    font-size: 1.1em;
    margin-bottom: 8px;
    margin-left: 7px;
    margin-top: 5px;
    margin-right: 5px;
}

